test/e2e/features/internalredirect/testdata/setup.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: httpbin
  namespace: kgateway-base
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: kgateway-base
  labels:
    app.kubernetes.io/name: httpbin
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8080
  selector:
    app.kubernetes.io/name: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: kgateway-base
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: httpbin
      version: v1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: httpbin
        version: v1
    spec:
      serviceAccountName: httpbin
      containers:
        - image: docker.io/mccutchen/go-httpbin:v2.6.0
          imagePullPolicy: IfNotPresent
          name: httpbin
          command: [go-httpbin]
          args:
            - "-port"
            - "8080"
            - "-max-duration"
            - "600s"
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "200m"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test
  namespace: kgateway-base
spec:
  parentRefs:
    - name: gateway
      namespace: kgateway-base
  rules:
    - name: redirect-with-policy
      matches:
      - path:
          type: PathPrefix
          value: /redirect-to
      - path:
          type: PathPrefix
          value: /status
      backendRefs:
        - name: httpbin
          port: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-no-policy
  namespace: kgateway-base
spec:
  parentRefs:
    - name: gateway
      namespace: kgateway-base
  hostnames:
    - "no-policy.example.com"
  rules:
    - name: redirect-no-policy
      matches:
      - path:
          type: PathPrefix
          value: /redirect-to
      - path:
          type: PathPrefix
          value: /status
      backendRefs:
        - name: httpbin
          port: 8000
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: internal-redirect
  namespace: kgateway-base
spec:
  targetRefs:
  - kind: HTTPRoute
    group: gateway.networking.k8s.io
    name: test
    sectionName: redirect-with-policy
  internalRedirect:
    redirectResponseCodes: [303]
    allowCrossSchemeRedirect: true
    responseHeadersToCopy: ["X-Custom-Header"]
    maxRedirects: 2
